--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
     "express": "^4.21.1",
+    "framer-motion": "^11.11.11",
     "lucide-react": "^0.453.0",
     "motion": "^10.18.0",
     "puppeteer": "^23.6.1",
